@@ -27,7 +27,8 @@
 #    8-Oct-2021  jdw add warning messages for empty read/merge container results in method __mergeContainers()
 #    5-Apr-2022  dwp Add support for loading id code lists for bird_chem_comp_core (mainly used for Azure testing)
 #   13-Apr-2022  dwp Update methods for obtaining list of computed-model files
-#   03-Aug-2022  dwp Enable retrieval of specific computed-model files with input
+#    3-Aug-2022  dwp Enable retrieval of specific computed-model files with input
+#    2-Feb-2023  dwp add support for requesting specific inputIdCodeList/idCodeList for CSMs
 ##
 """
 Utilities for scanning and accessing data in PDBx/mmCIF data in common repository file systems or via remote repository services.
