@@ -31,3 +31,4 @@
 20-Apr-2022 - V0.35 Fix issue in RepositoryProvider for mapping source and internal computed-model IDs
 03-Aug-2022 - V0.36 Enable retrieval of specific model files with input
 23-Dec-2022 - V0.37 Configuration changes to support tox 4
+ 2-Feb-2023 - V0.38 Add support for requesting specific inputIdCodeList/idCodeList for CSMs
